syntax="proto3";

package genproto;
option go_package="genproto/billing_service";

import "account.proto";
import "google/protobuf/empty.proto";

service AccountService {
    rpc Create(CreateAccountReq) returns (AccountNumber) {}
    rpc Update(Account) returns (AccountNumber) {}
    rpc Get(AccountNumber) returns (Account) {}
    rpc GetAll(GetAllAccountRequest) returns (GetAllAccountResponse) {}
    rpc Delete(AccountNumber) returns (google.protobuf.Empty) {}
    rpc GetPaymentTypes(google.protobuf.Empty) returns (PaymentTypesReq) {}
    rpc GetBalanceInfo(GetBalanceInfoReq) returns (GetBalanceInfoResp) {}
}

message GetBalanceInfoResp {
    double cost = 1;
    double credit = 2;
    double debit = 3;
}

message GetAllAccountRequest {
    int64 offset = 1;
    int64 limit = 2;
    string account_type = 3;
}

message CreateAccountReq {
    repeated CreateAccount accounts = 1;
}

message PaymentTypes {
    string id = 1;
    string name = 2;
}

message PaymentTypesReq {
    repeated PaymentTypes payment_types = 1;
}

message GetBalanceInfoReq {
    string company_id = 1;
}